# vllm_ascend_dashboard

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  QUICKSTART.md  README.md  deploy.sh  docker-compose.prod.yml
backend/: Dockerfile.prod  README.md  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  ci.py  daily_summary.py  github_activity.py  job_owners.py  model_sync_configs.py  models.py  performance.py  project_dashboard.py  system_config.py  users.py  workflows.py
backend/app/core/: config.py  config_manager.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  daily_summary.py
backend/app/schemas/: __init__.py  daily_summary.py
backend/app/services/: __init__.py  ci_collector.py  daily_summary.py  github_api.py  github_cache.py  github_cache_service.py  github_client.py  llm_client.py  model_report_parser.py  model_sync_service.py  model_trend_service.py  project_dashboard.py  scheduler.py  startup_command_generator.py  sync_progress.py
backend/scripts/: init_db.py  upgrade_db.py  upgrade_template.py  upgrade_v0.0.1.py  upgrade_v0.0.2.py  upgrade_v0.0.3.py  upgrade_v0.2.0.py  upgrade_v0.2.1.py  upgrade_v0.2.2.py  upgrade_v0.2.3.py  upgrade_v0.2.4.py  upgrade_v0.2.5.py  upgrade_v0.2.6.py  upgrade_v0.2.7.py
deploy/config/: mysql.cnf  nginx.conf
docs/: report_template.md  requirements.md  technical_design.md
frontend/: .eslintrc.json  Dockerfile.prod  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  stripe-design.css  vite-env.d.ts
frontend/src/components/: AISummaryTab.tsx  ChangePasswordModal.tsx  ErrorBoundary.tsx  GitHubActivityPanel.css  GitHubActivityPanel.tsx  Layout.css  Layout.tsx  Modal.css  ModelCompareModal.tsx  PROperations.tsx  ReportDetailModal.tsx  ReportEditModal.tsx  ResetPasswordModal.tsx  StartupCommandDisplay.tsx  common.css
frontend/src/hooks/: useCI.ts  useCurrentUser.ts  useDailySummary.ts  useJobOwners.ts  useRoles.ts  (+2 more)
scripts/: init.sh  start.sh
(+43 files in other folders)
